--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,8 @@ repositories {
 
 dependencies {
 
-	// Swagger 2
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+	//swagger3
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
