--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,19 @@
 spring:
+  application:
+    name: fastLane
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    generate-ddl: true
+    database: h2
+    defer-datasource-initialization: true
   datasource:
-    url: jdbc:h2:~/testdb
-    username: sa
-    password:
     driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
